Make game-area height fixed and add media queries for its height and result texts on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,9 +23,7 @@ body {
     width: 60vw;
     max-width: 600px;
     min-width: 400px;
-    height: 50vh;
-    max-height: 420px;
-    min-height: 420px;
+    height: 440px;
     margin: 0 auto;
 }
 
@@ -49,12 +47,12 @@ body {
 
 .hands {
     width: 80%;
-    margin: 20px auto;
+    margin: 10px auto;
 }
 
 img {
     width: 20vw;
-    max-width: 140px;
+    max-width: 180px;
     min-width: 120px;
 }
 
@@ -89,6 +87,7 @@ img {
 h2 {
     font-size: 1.2rem;
     padding-top: 20px;
+    margin-block-end: 0.75em;
 }
 
 button {
@@ -145,17 +144,41 @@ footer {
     width: 100%;
     color: white;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 15px;
 }
 
 /* Media queries */
+
+/* Screens 740px and below */
+
+@media (max-width: 740px) {
+    .game-area {
+        height: 400px;
+    }
+}
+
+/* Screens 580px and below */
+
+@media (max-width: 580px) {
+    .game-area {
+        height: 380px;
+    }
+}
 
 /* Screens 490px wide and below */
 
 @media (max-width: 490px) {
     .heading {
-        font-size: 2rem;
-        margin: 25px auto;
+        font-size: 1.9rem;
+        margin: 20px auto;
+    }
+
+    #result-header {
+        font-size: 1.4rem;
+    }
+    
+    #result-rule {
+        font-size: 1.2rem;
     }
 }
 
@@ -163,14 +186,21 @@ footer {
 
 @media (max-width: 400px) {
     body {
-        min-width: 370px;
+        min-width: 320px;
     }
     .game-area {
         width: 90vw;
-        min-width: 340px;
+        min-width: 310px;
     }
+
+    button {
+        width: 80px;
+        height: 30px;
+        font-size: 1rem;
+    }
+
     .score-area-outer {
         width: 90vw;
-        min-width: 340px;
+        min-width: 310px;
     }
 }
